# TKinter-Engineering-Tools

./: README.md  pyproject.toml
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/auto_tocs/: modules.rst  tkinter_tools.composite_widgets.rst  tkinter_tools.resources.rst  tkinter_tools.rst  tkinter_tools.widget_lists.rst
scripts/: _directory.py  image_encoder.py  install_everywhere.py  install_global.py  install_venv.py
tkinter_tools/: __init__.py  fancy_callbacks.py  tkinter_tools.py  tools.py
tkinter_tools/composite_widgets/: __init__.py  button.py  entry_label_pair.py  scrollable_frame.py  selection_label_pair.py  value_unit_pair.py
tkinter_tools/resources/: __init__.py  _encoded_images.py
tkinter_tools/widget_lists/: __init__.py  list_entry.py  widget_list.py  widget_matrix.py
