[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tkinter_tools"
version = "1.1.1"
authors = [
  { name="Arjan Lemmens", email="arjanmail@tutamail.com" },
]
description = "Tools to make technical GUIs with tkinter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "Pillow >= 9.4.0"
]
